Bug 157793 - FILEOPEN: PPTX: image's background is transparent instead of white
Summary: FILEOPEN: PPTX: image's background is transparent instead of white
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Patrick (volunteer)
URL:
Whiteboard: target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Image-Handling
  Show dependency treegraph
 
Reported: 2023-10-16 11:06 UTC by Xisco Faulí
Modified: 2023-12-12 14:24 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (41.21 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-10-16 11:06 UTC, Xisco Faulí
Details
Comparsion LibreOffice 24.2 master vs MSO (135.32 KB, image/png)
2023-10-16 11:08 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2023-10-16 11:06:18 UTC
Created attachment 190234 [details]
sample file

Steps to reproduce:
1. Open attached document

-> The black background is seen. It should be white instead. See comparison

Reproduced with

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 3649dc202bedf72e37c77993a1f7027bfdfc6d9e
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2023-10-16 11:07:28 UTC
Regression introduced by:

author	Patrick Luby <plubius@neooffice.org>	2023-10-06 15:21:50 -0400
committer	Patrick Luby <plubius@neooffice.org>	2023-10-06 22:31:00 +0200
commit b2ca39bc5e424e67e8fc7e8a044214feb09e39f7 (patch)
tree 531c1945eec20a2839fc712b160b77ca01edaf7a
parent c76fb134281a3d1fd56f8a6d07ad7111c85e17b9 (diff)
tdf#157576 and tdf#157635 mask out black pixels

Bisected with: bibisect-linux64-24.2

Adding Cc: to Patrick Luby
Comment 2 Xisco Faulí 2023-10-16 11:08:47 UTC
Created attachment 190235 [details]
Comparsion LibreOffice 24.2 master vs MSO
Comment 3 Patrick (volunteer) 2023-10-16 12:41:34 UTC
I can confirm that b2ca39bc5e424e67e8fc7e8a044214feb09e39f7 causes this bug. The question is how can I tell if an imported .gif will suffer from bug 157635 or not.

I will see if I can find if there are any differences in the rendering paths for this bug and bug 157635. I will post again when I have some news.
Comment 4 Commit Notification 2023-10-20 12:41:35 UTC
Patrick Luby committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a98000c028a3c68329fdb2047f51f8d271b2290c

tdf#157793 limit tdf#157635 fix to only larger palettes

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-10-23 13:28:13 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4d0e2203d1ccceb4a742b02c267e613b50ca9370

tdf#157793: sd_png_export: Add unittest

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.